app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 254 251 249;
    --foreground: 17 24 39;
    --card: 255 255 255;
    --card-foreground: 17 24 39;
    --primary: 255 114 92;
    --primary-foreground: 255 255 255;
    --secondary: 248 244 242;
    --secondary-foreground: 127 127 127;
    --muted: 245 245 245;
    --muted-foreground: 127 127 127;
    --accent: 255 242 238;
    --accent-foreground: 255 114 92;
    --destructive: 239 68 68;
    --destructive-foreground: 255 255 255;
    --border: 232 232 232;
    --input: 232 232 232;
    --ring: 255 114 92;
    --radius: 0.625rem;
  }

  .dark {
    --background: 6 30 52;
    --foreground: 241 245 249;
    --card: 9 53 85;
    --card-foreground: 241 245 249;
    --primary: 255 114 92;
    --primary-foreground: 255 255 255;
    --secondary: 17 54 92;
    --secondary-foreground: 148 163 184;
    --muted: 17 54 92;
    --muted-foreground: 148 163 184;
    --accent: 17 54 92;
    --accent-foreground: 148 163 184;
    --destructive: 239 68 68;
    --destructive-foreground: 255 255 255;
    --border: 20 56 92;
    --input: 20 56 92;
    --ring: 255 114 92;
  }
}

@layer base {
  * { @apply border-border; }
  body {
    @apply bg-background text-foreground antialiased;
    font-variation-settings: 'wdth' 100;
    font-feature-settings: 'ss01' 1;
  }
}

